refactor: reestrutura fluxo de preempção e estabiliza cálculo de prioridade
- Reorganiza o fluxo de dados no escalonamento preemptivo
- Introduz `prioridadeDinamica` para evitar crescimento acumulativo da prioridade
- Separa prioridade base de prioridade dinâmica, garantindo maior controle
- Ajusta lógica de aging para comportamento mais estável e previsível
- Reduz `tempoEspera` do processo em execução de forma gradual (não abrupta)
- Evita inanição e melhora a distribuição de CPU entre processos

Resultado: execução mais estável, justa e consistente ao longo do tempo